--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,13 +12,13 @@ jobs:
 
     steps:
     - name: Checkout del código
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
-    # Configuramos el entorno Java (Ejemplo usando Java 11)
-    - name: Configurar JDK 11
-      uses: actions/setup-java@v3
+    # Configuramos el entorno Java (Ejemplo usando Java 21)
+    - name: Configurar JDK 21
+      uses: actions/setup-java@4
       with:
-        java-version: '11'
+        java-version: '21'
         distribution: 'temurin' 
         cache: maven # Esto acelera futuras ejecuciones
 
