--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,11 +12,11 @@ jobs:
 
     steps:
     - name: Checkout del código
-      uses: actions/checkout@v4
+      uses: actions/checkout@v3
 
     # Configuramos el entorno Java (Ejemplo usando Java 21)
     - name: Configurar JDK 21
-      uses: actions/setup-java@4
+      uses: actions/setup-java@v3
       with:
         java-version: '21'
         distribution: 'temurin' 
